config-root/namespaces/jx-staging/kubeconawesome/deployment.yaml
# Source: kubeconawesome/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeconawesome-kubeconawesome
  labels:
    draft: draft-app
    chart: "kubeconawesome-1.0.5"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: kubeconawesome-kubeconawesome
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: kubeconawesome-kubeconawesome
    spec:
      containers:
        - name: kubeconawesome
          image: "gcr.io/jenkins-x-labs-bdd/kubeconawesome:1.0.5"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
