config-root/namespaces/jx-staging/kubeconawesome/ingress.yaml
# Source: kubeconawesome/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: kubeconawesome
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: kubeconawesome
              servicePort: 80
      host: kubeconawesome-jx.35.238.123.29.nip.io
